# letstune

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  mypy.ini  pyproject.toml
.github/workflows/: linttest.yml
docs/source/: conf.py  index.rst  misc.rst  params.rst  premade.rst  rand.rst  requirements.txt  results.rst  trainer.rst  tune.rst
docs/source/premade/: keras.rst  sklearn.rst
docs/source/results/: epoch.rst  simple.rst
examples/keras/: advanced_mnist_epochtrainer.py  advanced_mnist_kerastrainer.py  simple_mnist_epochtrainer.py  simple_mnist_kerastrainer.py
examples/sklearn/: digits_sgd_simpletrainer.py  digits_sgd_simpletrainer_cv.py  digits_sgd_sklearncvtrainer.py  digits_sgd_sklearntrainer.py
examples/xgboost/: classification_epochtrainer.py
letstune/: __init__.py  keras.py  metrics.py  params.py  patch37.py  rand.py  sklearn.py  trainer.py
letstune/backend/: facade.py
letstune/backend/repo/: __init__.py  sqlite.py
letstune/backend/runner/: _base.py  checkpoint.py  epoch.py  log.py  simple.py
letstune/backend/scheduler/: epoch.py  simple.py
letstune/results/: _base.py  epoch.py  simple.py
scripts/: lint.sh  preamble.sh  runexamples.sh  test.sh
tests/: test_keras.py  test_letstune.py  test_metrics.py  test_sklearn.py  test_version.py
tests/backend/: test_facade.py  test_facade_rounds_config.py
tests/backend/repo/: test_sqlite.py
tests/backend/runner/: test_base.py  test_epoch.py  test_simple.py  utils.py
tests/params/: test_bool_params.py  test_empty_params.py  test_invalid_params.py  test_model_params.py  test_nested_params.py  test_nested_params_annotations.py  test_simple_params.py  test_union_custom_gen_params.py  test_union_params.py  test_union_params_annotations.py  utils.py
tests/rand/: conftest.py  test_bools.py  test_ints.py  test_normal.py  test_normal_log.py  test_oneof.py  test_oneof_params.py  test_oneof_weights.py  test_uniform.py  test_uniform_log.py  utils.py
tests/results/: test_empty.py  test_epoch.py  test_epoch_greater_is_better.py  test_epoch_lower_is_better.py  test_epoch_rounds.py  test_epoch_union.py  test_simple.py  test_simple_greater_is_better.py  test_simple_lower_is_better.py  test_simple_union.py  utils.py
tests/test_sklearn/: test_sklearncvtrainer.py  test_sklearntrainer.py
tests/trainer/: test_epoch_trainer.py  test_inheritance.py  test_simple_trainer.py
(+5 files in other folders)
