[tool.poetry]
name = "letstune"
version = "0.1.0"
description = "Hyper-parameter tuning for the masses!"
authors = ["Michał Słapek <28485371+mslapek@users.noreply.github.com>"]

[tool.mypy]
warn_unused_configs = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
disallow_subclassing_any = true
disallow_untyped_calls = true

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
black = "^22.1.0"
mypy = "^0.940"
flake8 = "^4.0.1"
pytest-mock = "^3.7.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
