[tool.poetry]
name = "letstune"
version = "0.1.0"
description = "Hyper-parameter tuning for the masses!"
authors = ["Michał Słapek <28485371+mslapek@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.22.3"
scipy = "^1.8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
black = "^22.1.0"
mypy = "^0.940"
flake8 = "^4.0.1"
pytest-mock = "^3.7.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
